--- a/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
+++ b/paper_data_v3/enet_predictions/enet_who_comparison.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2b5a547b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,6 @@
     "warnings.filterwarnings('ignore')\n",
     "from distance import hamming as distance\n",
     "pd.set_option('display.max_columns', None)\n",
-    "from domseq import DomSeq\n",
     "from zedstat.textable import textable\n",
     "\n",
     "\n",
@@ -1462,6 +1461,437 @@
     "textable(enet, tabname = 'tables/huddleston_comparison.tex', FORMAT='%1.2f')\n",
     "enet"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2e39f48",
+   "metadata": {},
+   "source": [
+    "## What if we used a random strain from that season instead of our predicted strain?\n",
+    "- Select a random strain from each season to be our \"predictions\"\n",
+    "- Perform the same analysis as before with these random strains\n",
+    "- Repeat n times and take the 95th percentile of errors among these n repetitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9019c06b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for FILE in FILES:    \n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '_single_cluster.csv', converters={'season': str})\n",
+    "    df.to_csv(OUT_DIR + FILE + '_single_cluster_random.csv', index=False)\n",
+    "    \n",
+    "NORTH_YEARS_RANDOM = []\n",
+    "for i in np.arange(2, 23):\n",
+    "    YEAR = ''\n",
+    "    if i < 10:\n",
+    "        YEAR += '0' + str(i)\n",
+    "    else:\n",
+    "        YEAR += (str(i))\n",
+    "    if i + 1 < 10:\n",
+    "        YEAR += '_0' + str(i + 1)\n",
+    "    else:\n",
+    "        YEAR += '_' + str(i + 1)\n",
+    "    NORTH_YEARS_RANDOM.append(YEAR)\n",
+    "        \n",
+    "SOUTH_YEARS_RANDOM = []\n",
+    "for i in np.arange(2, 23):\n",
+    "    if i < 10:\n",
+    "        SOUTH_YEARS_RANDOM.append('0' + str(i))\n",
+    "    else:\n",
+    "        SOUTH_YEARS_RANDOM.append(str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aaa43293",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Improvement\n",
+      "\tNorth H1N1 HA: 3.600\n",
+      "\tNorth H3N2 HA: 2.799\n",
+      "\tSouth H1N1 HA: 6.620\n",
+      "\tSouth H3N2 HA: 3.071\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>north_season</th>\n",
+       "      <th>north_h1n1_ha</th>\n",
+       "      <th>north_h3n2_ha</th>\n",
+       "      <th>south_season</th>\n",
+       "      <th>south_h1n1_ha</th>\n",
+       "      <th>south_h3n2_ha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>03_04</td>\n",
+       "      <td>-6.09</td>\n",
+       "      <td>3.69</td>\n",
+       "      <td>03</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>-0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>04_05</td>\n",
+       "      <td>-2.04</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>04</td>\n",
+       "      <td>-1.75</td>\n",
+       "      <td>2.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>05_06</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>05</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>4.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>06_07</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>06</td>\n",
+       "      <td>-0.23</td>\n",
+       "      <td>13.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07_08</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>5.53</td>\n",
+       "      <td>07</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>1.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>08_09</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>08</td>\n",
+       "      <td>20.01</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>09_10</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>09</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>3.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10_11</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>10</td>\n",
+       "      <td>22.66</td>\n",
+       "      <td>2.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11_12</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>3.08</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23.14</td>\n",
+       "      <td>4.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>12_13</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>2.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13_14</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14_15</td>\n",
+       "      <td>11.85</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>1.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>15_16</td>\n",
+       "      <td>5.69</td>\n",
+       "      <td>3.66</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>-0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>16_17</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>2.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>17_18</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>3.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>18_19</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>18</td>\n",
+       "      <td>13.60</td>\n",
+       "      <td>2.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>19_20</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2.61</td>\n",
+       "      <td>2.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>20_21</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>-3.80</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>7.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>21_22</td>\n",
+       "      <td>33.41</td>\n",
+       "      <td>8.17</td>\n",
+       "      <td>21</td>\n",
+       "      <td>30.70</td>\n",
+       "      <td>3.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>22_23</td>\n",
+       "      <td>-1.24</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>6.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>23_24</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   north_season  north_h1n1_ha  north_h3n2_ha south_season  south_h1n1_ha  \\\n",
+       "0         03_04          -6.09           3.69           03           3.13   \n",
+       "1         04_05          -2.04           1.64           04          -1.75   \n",
+       "2         05_06           1.67           1.44           05           4.38   \n",
+       "3         06_07           3.77           2.37           06          -0.23   \n",
+       "4         07_08           0.14           5.53           07           2.19   \n",
+       "5         08_09           3.58           3.40           08          20.01   \n",
+       "6         09_10           0.02           1.39           09           0.11   \n",
+       "7         10_11           0.87           3.91           10          22.66   \n",
+       "8         11_12           2.67           3.08           11          23.14   \n",
+       "9         12_13           5.65           3.14           12           3.95   \n",
+       "10        13_14           1.98           3.89           13           1.68   \n",
+       "11        14_15          11.85           1.16           14           4.83   \n",
+       "12        15_16           5.69           3.66           15           1.45   \n",
+       "13        16_17           3.06           3.36           16           1.31   \n",
+       "14        17_18           1.42           2.20           17           1.74   \n",
+       "15        18_19           2.91           3.21           18          13.60   \n",
+       "16        19_20           2.89           3.33           19           2.61   \n",
+       "17        20_21           3.40          -3.80           20           2.09   \n",
+       "18        21_22          33.41           8.17           21          30.70   \n",
+       "19        22_23          -1.24           4.00           22           1.44   \n",
+       "20        23_24           0.00           0.00           23           0.00   \n",
+       "\n",
+       "    south_h3n2_ha  \n",
+       "0           -0.88  \n",
+       "1            2.67  \n",
+       "2            4.25  \n",
+       "3           13.46  \n",
+       "4            1.01  \n",
+       "5            0.17  \n",
+       "6            3.70  \n",
+       "7            2.51  \n",
+       "8            4.86  \n",
+       "9            2.87  \n",
+       "10           1.09  \n",
+       "11           1.37  \n",
+       "12          -0.17  \n",
+       "13           2.34  \n",
+       "14           3.45  \n",
+       "15           2.29  \n",
+       "16           2.10  \n",
+       "17           7.47  \n",
+       "18           3.54  \n",
+       "19           6.43  \n",
+       "20           0.00  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for FILE in FILES: \n",
+    "    YEARS = NORTH_YEARS_RANDOM\n",
+    "    if FILE[:5] == 'south':\n",
+    "        YEARS = SOUTH_YEARS_RANDOM\n",
+    "    \n",
+    "    # Compute errors\n",
+    "    n = 20\n",
+    "    random_errors_ha = [[] for _ in range(len(YEARS))]\n",
+    "    random_errors_na = [[] for _ in range(len(YEARS))]\n",
+    "\n",
+    "    # Random sequences\n",
+    "    for state in range(n):\n",
+    "        random_seqs = []\n",
+    "        for YEAR in YEARS:\n",
+    "            population_df = pd.read_csv('data/merged/' + FILE + '/' + FILE + '_' + YEAR + '.csv')\n",
+    "            population_df = population_df.drop_duplicates(subset=['sequence'])\n",
+    "            random_seqs.append(population_df.sample(random_state=state))\n",
+    "        \n",
+    "        df = pd.read_csv(OUT_DIR + FILE + '_single_cluster_random.csv', converters={'season': str})\n",
+    "        seasons = df['season'].values\n",
+    "    \n",
+    "        for i in range(len(seasons)):\n",
+    "            season_str = str(seasons[i])\n",
+    "            if len(season_str) == 1:\n",
+    "                season_str = str('0' + season_str)\n",
+    "                \n",
+    "            # Read all sequences\n",
+    "            DATA_DIR = 'data/merged/' + FILE + '/' + FILE + '_' + season_str + '.csv'\n",
+    "            if not os.path.isfile(DATA_DIR):\n",
+    "                random_errors_ha[i] = -1\n",
+    "                random_errors_na[i] = -1\n",
+    "                continue\n",
+    "            seq_df = pd.read_csv(DATA_DIR)\n",
+    "            \n",
+    "            # Random seq\n",
+    "            random_seq_ha = random_seqs[i]['sequence'].values[0]\n",
+    "            random_seq_na = random_seqs[i]['sequence_na'].values[0]\n",
+    "            \n",
+    "            # Find average random errors\n",
+    "            total_random_error_ha = 0\n",
+    "            total_random_error_na = 0\n",
+    "            \n",
+    "            # HA\n",
+    "            ha_len = len(seq_df)\n",
+    "            for seq in seq_df['sequence']:\n",
+    "                if len(seq) < HA_TRUNC:\n",
+    "                    ha_len -= 1\n",
+    "                    continue\n",
+    "                total_random_error_ha += distance(random_seq_ha, seq[:HA_TRUNC])\n",
+    "            # NA\n",
+    "            na_len = len(seq_df)\n",
+    "            for seq in seq_df['sequence_na']:\n",
+    "                if len(seq) < NA_TRUNC:\n",
+    "                    na_len -= 1\n",
+    "                    continue\n",
+    "                total_random_error_na += distance(random_seq_na, seq[:NA_TRUNC])\n",
+    "                \n",
+    "            random_errors_ha[i].append(total_random_error_ha/ha_len)\n",
+    "            random_errors_na[i].append(total_random_error_ha/na_len)\n",
+    "\n",
+    "    # Mean of the error\n",
+    "    df['ha_random_error'] = [np.mean(random_errors_ha[i]) for i in range(21)]\n",
+    "    df['na_random_error'] = [np.mean(random_errors_na[i]) for i in range(21)]\n",
+    "    # Variance of the error\n",
+    "    df['ha_random_error_std'] = [np.std(random_errors_ha[i]) for i in range(21)]\n",
+    "    df['na_random_error_std'] = [np.std(random_errors_na[i]) for i in range(21)]\n",
+    "    df.to_csv(OUT_DIR + FILE + '_single_cluster_random.csv', index=False)\n",
+    "    \n",
+    "\n",
+    "# Error differences between Enet and random\n",
+    "# Positive means we are better, negative means random better\n",
+    "north_errors_df = pd.DataFrame({'north_season':NORTH_YEARS})\n",
+    "for FILE in FILES[:2]:\n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '_single_cluster_random.csv')\n",
+    "    north_errors_df[FILE + '_ha'] = df['ha_random_error'] - df['ha_enet_error']\n",
+    "    north_errors_df[FILE + '_na'] = df['na_random_error'] - df['na_enet_error']\n",
+    "    \n",
+    "south_errors_df = pd.DataFrame({'south_season':SOUTH_YEARS})\n",
+    "for FILE in FILES[2:]:\n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '_single_cluster_random.csv')\n",
+    "    south_errors_df[FILE + '_ha'] = df['ha_random_error'] - df['ha_enet_error']\n",
+    "    south_errors_df[FILE + '_na'] = df['na_random_error'] - df['na_enet_error']\n",
+    "    \n",
+    "errors_df = north_errors_df.join(south_errors_df, how='outer')\n",
+    "errors_df.to_csv(OUT_DIR + 'errors_difference_single_cluster_random.csv', index=False)\n",
+    "print('Average Improvement')\n",
+    "print(f'\\tNorth H1N1 HA: {np.mean(errors_df[\"north_h1n1_ha\"]):.3f}')\n",
+    "print(f'\\tNorth H3N2 HA: {np.mean(errors_df[\"north_h3n2_ha\"]):.3f}')\n",
+    "print(f'\\tSouth H1N1 HA: {np.mean(errors_df[\"south_h1n1_ha\"]):.3f}')\n",
+    "print(f'\\tSouth H3N2 HA: {np.mean(errors_df[\"south_h3n2_ha\"]):.3f}')\n",
+    "errors_df[['north_season', 'north_h1n1_ha', 'north_h3n2_ha', \n",
+    "           'south_season', 'south_h1n1_ha', 'south_h3n2_ha']].round(2)"
+   ]
   }
  ],
  "metadata": {
@@ -1480,7 +1910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
