--- a/paper_data_v3/enet_predictions/make_tables.ipynb
+++ b/paper_data_v3/enet_predictions/make_tables.ipynb
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8b26726a",
    "metadata": {},
    "outputs": [
@@ -719,19 +719,116 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "All arrays must be of the same length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m improvement_20 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m*\u001b[39m (np\u001b[38;5;241m.\u001b[39marray(random_err_20) \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39marray(enet_err_20)) \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39marray(enet_err_20)\n\u001b[1;32m     31\u001b[0m improvement_10 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m*\u001b[39m (np\u001b[38;5;241m.\u001b[39marray(random_err_10) \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39marray(enet_err_10)) \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39marray(enet_err_10)\n\u001b[0;32m---> 33\u001b[0m enet_improvement \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSubtype\u001b[39m\u001b[38;5;124m'\u001b[39m:subtype,\n\u001b[1;32m     34\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHemisphere\u001b[39m\u001b[38;5;124m'\u001b[39m:hemisphere,\n\u001b[1;32m     35\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Error (2 decade)\u001b[39m\u001b[38;5;124m'\u001b[39m:random_err_20,\n\u001b[1;32m     36\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnet Error (2 decade)\u001b[39m\u001b[38;5;124m'\u001b[39m:enet_err_20,\n\u001b[1;32m     37\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImprovement (2 decade) (\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m:improvement_20,\n\u001b[1;32m     38\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRandom Error (1 decade)\u001b[39m\u001b[38;5;124m'\u001b[39m:random_err_10,\n\u001b[1;32m     39\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnet Error (1 decade)\u001b[39m\u001b[38;5;124m'\u001b[39m:enet_err_10,\n\u001b[1;32m     40\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImprovement (1 decade) (\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m:improvement_10})\n\u001b[1;32m     41\u001b[0m enet_improvement\u001b[38;5;241m.\u001b[39mto_csv(DATA_DIR \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124menet_improvement_random.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     42\u001b[0m enet_improvement \u001b[38;5;241m=\u001b[39m enet_improvement\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSubtype\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/usr/local/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:664\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    658\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_mgr(\n\u001b[1;32m    659\u001b[0m         data, axes\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: index, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m: columns}, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy\n\u001b[1;32m    660\u001b[0m     )\n\u001b[1;32m    662\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m    663\u001b[0m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[0;32m--> 664\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m dict_to_mgr(data, index, columns, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy, typ\u001b[38;5;241m=\u001b[39mmanager)\n\u001b[1;32m    665\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma\u001b[38;5;241m.\u001b[39mMaskedArray):\n\u001b[1;32m    666\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mma\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmrecords\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmrecords\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/local/anaconda3/lib/python3.11/site-packages/pandas/core/internals/construction.py:493\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[0;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[1;32m    489\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    490\u001b[0m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[1;32m    491\u001b[0m         arrays \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[0;32m--> 493\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m arrays_to_mgr(arrays, columns, index, dtype\u001b[38;5;241m=\u001b[39mdtype, typ\u001b[38;5;241m=\u001b[39mtyp, consolidate\u001b[38;5;241m=\u001b[39mcopy)\n",
-      "File \u001b[0;32m/usr/local/anaconda3/lib/python3.11/site-packages/pandas/core/internals/construction.py:118\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[0;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[1;32m    116\u001b[0m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[1;32m    117\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 118\u001b[0m         index \u001b[38;5;241m=\u001b[39m _extract_index(arrays)\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    120\u001b[0m         index \u001b[38;5;241m=\u001b[39m ensure_index(index)\n",
-      "File \u001b[0;32m/usr/local/anaconda3/lib/python3.11/site-packages/pandas/core/internals/construction.py:666\u001b[0m, in \u001b[0;36m_extract_index\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    664\u001b[0m lengths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(raw_lengths))\n\u001b[1;32m    665\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lengths) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 666\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll arrays must be of the same length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    668\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m have_dicts:\n\u001b[1;32m    669\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    670\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    671\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: All arrays must be of the same length"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hemisphere</th>\n",
+       "      <th>Random Error (2 decade)</th>\n",
+       "      <th>Enet Error (2 decade)</th>\n",
+       "      <th>Improvement (2 decade) (%)</th>\n",
+       "      <th>Random Error (1 decade)</th>\n",
+       "      <th>Enet Error (1 decade)</th>\n",
+       "      <th>Improvement (1 decade) (%)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Subtype</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>H1N1</th>\n",
+       "      <td>North</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>30.26</td>\n",
+       "      <td>12.49</td>\n",
+       "      <td>14.77</td>\n",
+       "      <td>8.24</td>\n",
+       "      <td>79.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H1N1</th>\n",
+       "      <td>South</td>\n",
+       "      <td>35.20</td>\n",
+       "      <td>28.25</td>\n",
+       "      <td>24.61</td>\n",
+       "      <td>14.50</td>\n",
+       "      <td>8.35</td>\n",
+       "      <td>73.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H3N2</th>\n",
+       "      <td>North</td>\n",
+       "      <td>10.80</td>\n",
+       "      <td>7.86</td>\n",
+       "      <td>37.37</td>\n",
+       "      <td>12.45</td>\n",
+       "      <td>9.53</td>\n",
+       "      <td>30.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>H3N2</th>\n",
+       "      <td>South</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>9.07</td>\n",
+       "      <td>35.54</td>\n",
+       "      <td>12.87</td>\n",
+       "      <td>9.88</td>\n",
+       "      <td>30.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Hemisphere  Random Error (2 decade)  Enet Error (2 decade)  \\\n",
+       "Subtype                                                              \n",
+       "H1N1         North                    34.03                  30.26   \n",
+       "H1N1         South                    35.20                  28.25   \n",
+       "H3N2         North                    10.80                   7.86   \n",
+       "H3N2         South                    12.30                   9.07   \n",
+       "\n",
+       "         Improvement (2 decade) (%)  Random Error (1 decade)  \\\n",
+       "Subtype                                                        \n",
+       "H1N1                          12.49                    14.77   \n",
+       "H1N1                          24.61                    14.50   \n",
+       "H3N2                          37.37                    12.45   \n",
+       "H3N2                          35.54                    12.87   \n",
+       "\n",
+       "         Enet Error (1 decade)  Improvement (1 decade) (%)  \n",
+       "Subtype                                                     \n",
+       "H1N1                      8.24                       79.36  \n",
+       "H1N1                      8.35                       73.54  \n",
+       "H3N2                      9.53                       30.61  \n",
+       "H3N2                      9.88                       30.26  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
